@@ -1,3 +1,7 @@
+drkns 16.07.2016 13:51:54 +0200 - build 4743
+
+1. Иногда, если очень повезёт, вызов редактора после работы с панельным плагином мог приводить к падению.
+
 drkns 09.07.2016 22:56:35 +0200 - build 4742
 
 1. Ansi-плагины, у которых ресурсы недостаточно хороши, могли не загружаться.
